DeepLearningModel/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: i4q-demo-deployment
  namespace: deep-model
  labels:
    app: i4q-demo-deployment
    service: i4q-demo-deployment
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 8080
  selector:
    app: i4q-demo-deployment
